--- a/frontend/src/app/features/lessons/components/lesson-viewer/lesson-viewer.component.scss
+++ b/frontend/src/app/features/lessons/components/lesson-viewer/lesson-viewer.component.scss
@@ -12,14 +12,17 @@ $_ease: 0.2s cubic-bezier(0.2, 0.8, 0.2, 1);
 :host {
   display: flex;
   flex-direction: column;
+  flex: 1;
   color: var(--white);
-  // overflow-x: hidden;
   h1, h2, p {
     margin: 0 !important;
   }
 }
 
 .lesson-main {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
   position: relative;
   z-index: 1;
 }
@@ -116,7 +119,9 @@ $_ease: 0.2s cubic-bezier(0.2, 0.8, 0.2, 1);
 .content-view {
   display: flex;
   flex-direction: column;
+  flex: 1;
   gap: 2rem;
+  justify-content: center;
 
   .section-wrapper {
     display: flex;
@@ -134,16 +139,6 @@ $_ease: 0.2s cubic-bezier(0.2, 0.8, 0.2, 1);
     .icon {
       font-size: 1.25rem;
     }
-  }
-
-  .lesson-description {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 1rem;
-    color: var(--text-secondary);
-    font-size: 1.5rem;
-    border-left: 4px solid var(--accent);
   }
 
   .lesson-content {
@@ -192,7 +187,6 @@ $_ease: 0.2s cubic-bezier(0.2, 0.8, 0.2, 1);
   }
 
   .action-section {
-    margin-top: 1.5rem;
     text-align: center;
     display: flex;
     flex-direction: column;
